# real-estate-info

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: sales_volume_and_ratio.ipynb  sodapy.ipynb
real_estate_info/: __main__.py  datasource.py  web.py
